[package]
name = "judos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1"
serde_yaml = "0.8"

crossbeam = "0.8"
ctrlc = "3.2"
chrono = "0.4"

log = "0.4"
env_logger= "0.9"
